# HESVAT

./: CMakeLists.txt  LICENSE  README.md
src/: HEutils.cpp  HEutils.h  evaluator_Aggregation.cpp  evaluator_Aggregation.h  main.cpp  mainPlain.cpp  testPVAT.cpp  testPVAT.h  testSVAT.cpp  testSVAT.h  thread.h  utils.cpp  utils.h
